--- a/src/_modules/portfolio/portfolio.jade
+++ b/src/_modules/portfolio/portfolio.jade
@@ -1,16 +1,5 @@
--
-  var portfolioList = [
-    'lambdaApp',
-    'lambdaPhotography',
-    'vespa',
-    'fedor',
-  ]
-
-mixin getPortfolioList( portfolioList )
-  for item in portfolioList
-    .portfolio__item
-      a.portfolio__link(href='./pages/#{item}/index.html' target="_blank")
-        img.portfolio__img(src='./pages/#{item}/img.jpg' alt='img_page')
+include data
+include mixins
 
 .portfolio
   .portfolio__container.container
