--- a/src/_modules/portfolio/mixins.jade
+++ b/src/_modules/portfolio/mixins.jade
@@ -2,4 +2,4 @@ mixin getPortfolioList( portfolioList )
   for item in portfolioList
     .portfolio__item
       a.portfolio__link(href='./pages/#{item}/index.html' target="_blank")
-        img.portfolio__img(src='./pages/#{item}/img.jpg' alt='img_page')
+        img.portfolio__img(src='./pages/#{item}/img.png' alt='img_page')
