--- a/src/_modules/portfolio/portfolio.scss
+++ b/src/_modules/portfolio/portfolio.scss
@@ -14,16 +14,16 @@ body {
   }
 
   &__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    position: relative;
   }
 
   &__item {
-    max-width: 300px;
-    height: 200px;
+    display: inline-block;
+    position: relative;
+    width: 280px;
+    height: 150px;
     overflow: hidden;
-    margin: 10px 0;
+    margin: 10px 9px 0 0;
     border-radius: 6px;
 
     &:hover {
