add instagram link, fix width contact part

--- a/src/_modules/contact/contact.jade
+++ b/src/_modules/contact/contact.jade
@@ -26,3 +26,6 @@
         a.contact__item-extra(href='https://hh.ru/resume/10330365ff0435c94e0039ed1f6937346d764a' target="_blank")
           .contact__icon.contact__icon-hh.icon hh
           .contact__description-extra.p2 HeadHunter
+        a.contact__item-extra(href='https://www.instagram.com/_alexandr_mi/' target="_blank")
+          .contact__icon.fa.fa-instagram.icon
+          .contact__description-extra.p2 Instagram
