--- a/src/_modules/contact/contact.scss
+++ b/src/_modules/contact/contact.scss
@@ -1,6 +1,6 @@
 .contact {
   &__container {
-    padding-left: 60px;
+    padding-left: 75px;
   }
   &__item {
     align-items: baseline;
@@ -13,11 +13,15 @@
   &__icon-hh {
     font-weight: 700;
   }
+  .contact__list {
+    position: relative;
+  }
   .contact__list-extra {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
+    box-sizing: border-box;
   }
 
   &__item-extra {
@@ -26,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80px;
+    width: 75px;
     padding: 10px 0;
     text-align: center;
     cursor: pointer;
@@ -57,3 +61,36 @@
   }
 }
 
+.contact__item-extra:before {
+  color: white;
+  position: absolute;
+  top: 62px;
+  left: calc(50% - 75px);
+  width: 150px;
+  text-align: center;
+  background-color: #181818;
+  display: none;
+}
+
+.contact__item-extra_location:before {
+  content: 'Minsk/Orsha Belarus';
+}
+
+.contact__item-extra_email:before {
+  content: 'alexandr-mi@inbox.ru';
+}
+
+.contact__item-extra_phone:before {
+  content: '+375(25) 604-56-90';
+}
+.contact__item-extra_location:hover,
+.contact__item-extra_email:hover,
+.contact__item-extra_phone:hover{
+  &:before {
+    display: block;
+    background-color: #181818;
+  }
+}
+.contact__item-extra_phone:before:hover {
+  background: red;
+}
