--- a/src/_layouts/mobile.jade
+++ b/src/_layouts/mobile.jade
@@ -17,7 +17,7 @@ head
   block stylesheets
     script(src= baseUrl + 'scripts/main-preload.js')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oswald:200,300,400,500' )
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css')
     link(rel='stylesheet', href= baseUrl + 'styles/main-mobile.css')
 
 body
